# image-upload-webpage

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml
.github/workflows/: pipeline.yml
client/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/public/static/: .gitkeep
client/src/: App.vue  main.ts  shims-vue.d.ts  style.css
client/src/assets/styles/: theme.scss
client/src/components/: HelloWorld.vue
client/src/components/auth/: LoginPage.vue
client/src/components/image/: GalleryGrid.vue  ImageLightbox.vue  ImagePage.vue  ImageUploader.vue  ImageViewer.vue  ThumbnailPreviewer.vue
client/src/components/pages/: EntertainmentPage.vue  GalleryPage.vue  LandingPage.vue  LoginPage.vue
client/src/components/ui/: HamburgerDrawer.vue  HamburgerMenu.vue  HorizontalScrollContainer.vue  LoadingOverlay.vue  ScrollBar.vue
client/src/constants/: fileConstants.ts  navLinks.ts
client/src/data/: .gitkeep
client/src/presets/: Noir.ts
client/src/router/: index.ts
client/src/routers/: index.ts
client/src/services/: api.ts
client/src/stores/: imageStore.ts
nginx/conf.d/: site.conf
nginx/options/: security_headers.conf
nginx/templates/: site.conf.template  site.conf.tpl
server/: .ignore  Cargo.toml  README.md
server/assets/: index.html  not_found.html
server/assets/assets/: GalleryPage-AsnRKJoO.js  GalleryPage-CGbo2O3F.css  LandingPage-DM3PhIl_.js  LandingPage-TLybVYck.css  LoginPage-C3ek42tl.js  LoginPage-Cv_OE6bO.css  LoginPage-Fkq-adx7.js  imageStore-DE_VAD7A.js  index-BNbPiXva.css  index-BOgo1xqN.js  index-BXNXiPdF.js  index-C4mQ3lY1.css  index-D5uQxyN_.js  index-DPdBd_qo.css  index-DocGP6XP.js  index-Zg9boYmM.css  index-lxKFhPlO.js
server/src/: app.rs  config.rs  lib.rs  main.rs  middleware.rs
server/src/auth/: certificates.rs  jwt.rs  login.rs  mod.rs  routers.rs
server/src/files/: errors.rs  handlers.rs  mod.rs  routers.rs  storage.rs
server/tests/: integration_test.rs  integration_tests.rs
