[package]
name = "server"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
serde = { version = "1.0.217", features = ["derive"] }
hyper = {version = "1.6.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
image = "0.25.5"
tower = "0.5.2"
thiserror = "2.0.11"
serde_json = "1.0.138"
dotenv = "0.15.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
